GetCurrentMemoryState() shouldn't return SUSPENDED state in browser

At least for now, clients in the browser process don't accept
SUSPENDED state. MemoryCoordinatorImpl::GetCurrentMemoryState()
shouldn't return SUSPENDED state. Use THROTTLED state instead.

BUG=659891

Review-Url: https://codereview.chromium.org/2450093006
Cr-Commit-Position: refs/heads/master@{#427980}

Former-commit-id: 0693b4df2baa450f88e4dbefc65a30bafc66e769